checking robots file & downloading pages in threads